--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ footer {
         <h2>Projects</h2>
 	<div class="project">
             <h3>Simple Calculator</h3>
-            <p><strong>Technologies Used:</strong> HTML, CSS, Flask with Pycharm</p>
+            <p><strong>Technologies Used:</strong> HTML, CSS, JavaScript</p>
             <p>Developed a website to do basic calculating operations with two operands</p>
 	    <a href="https://github.com/yourusername/project1">View Project</a>
         </div>
